// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/chart - defaults to bitcoin in USD - last 1d 2`] = `
Object {
  "photo": "see image snapshot /chart - defaults to bitcoin in USD - last 1d",
}
`;

exports[`/chart eth aud 30 - supports other options 2`] = `
Object {
  "photo": "see image snapshot /chart eth aud 30 - supports other options",
}
`;

exports[`/chart usdc - turns red if price is falling 2`] = `
Object {
  "photo": "see image snapshot /chart usdc - turns red if price is falling",
}
`;

exports[`/convert - defaults to 1 usd in usd 1`] = `"$1 = $1"`;

exports[`/convert 42 doge - defaults to converting coins to usd 1`] = `"42 DOGE = $1.04471"`;

exports[`/convert 100 asdfasdf - returns an error for invalid coin 1`] = `
"Sorry, I can't get prices in asdfasdf.
Try using a major currency symbol such as USD, EUR, GBP, BTC, ETH, LTC, etc."
`;

exports[`/convert 100 doge ark - supports coin to coin 1`] = `"100 DOGE = 2.26598 ARK"`;

exports[`/convert 100 eth asdfasdf - returns an error for invalid vs 1`] = `
"Sorry, I can't get prices in asdfasdf.
Try using a major currency symbol such as USD, EUR, GBP, BTC, ETH, LTC, etc."
`;

exports[`/convert 100 usd aud - supports vs to vs 1`] = `"$100 = A$130.856"`;

exports[`/convert 100 usd doge - supports vs to coin 1`] = `"$100 = 4,020.24 DOGE"`;

exports[`/convert 400,000.00 doge eur - ignores commas in en locale 1`] = `"400,000 DOGE = €3,028.83"`;

exports[`/convert 400,000.00 doge eur - ignores empty locale 1`] = `"400,000 DOGE = €3,028.83"`;

exports[`/convert 400,000.00 doge eur - ignores xx locale 1`] = `"400,000 DOGE = €3,028.83"`;

exports[`/convert 400.000,00 doge eur - understands de locale 1`] = `"400.000 DOGE = € 3.028,83"`;

exports[`/convert 1000 ethereum aud - supports other currencies 1`] = `"1,000 ETH = A$1,602,030"`;

exports[`/convert foo - returns an error for invalid amount 1`] = `"Amount 'foo' is not a valid number"`;

exports[`/price - defaults to btc in usd 1`] = `
Object {
  "parse_mode": "markdown",
  "text": "*Bitcoin (BTC)* in USD
Current price:  \`$35,807\`
h/d/w/m: \`-0.228%\` / \`-1.9%\` / \`-11.1%\` / \`57%\` 
Market cap:  \`$663,977,264,729\`
24h volume:  \`$52,497,360,217\`
_(updated Sun, 17 Jan 2021 19:02:48 GMT)_",
}
`;

exports[`/price 10000 doge - redirects to convert when first arg is a number 1`] = `"10,000 DOGE = $248.742"`;

exports[`/price ETH GBP - finds coins by symbol 1`] = `
Object {
  "parse_mode": "markdown",
  "text": "*Ethereum (ETH)* in GBP
Current price:  \`£906.23\`
h/d/w/m: \`0.166%\` / \`-0.0911%\` / \`-4.18%\` / \`90.9%\` 
Market cap:  \`£103,307,225,676\`
24h volume:  \`£26,528,626,731\`
_(updated Sun, 17 Jan 2021 19:03:27 GMT)_",
}
`;

exports[`/price PEAKDEFI - finds coins by name 1`] = `
Object {
  "parse_mode": "markdown",
  "text": "*PEAKDEFI (PEAK)* in USD
Current price:  \`$0.269714\`
h/d/w/m: \`0.705%\` / \`3.52%\` / \`1.46%\` / \`-14.1%\` 
Market cap:  \`$24,860,396\`
24h volume:  \`$183,402\`
_(updated Sun, 17 Jan 2021 19:00:08 GMT)_",
}
`;

exports[`/price algoha - finds coins by symbol partial match 1`] = `
Object {
  "parse_mode": "markdown",
  "text": "*0.5X Long Algorand Token (ALGOHALF)* in USD
Current price:  \`$9,857.57\`
h/d/w/m: \`?\` / \`?\` / \`?\` / \`?\` 
Market cap:  \`$0\`
24h volume:  \`$60.03\`
_(updated Sat, 16 Jan 2021 08:09:16 GMT)_",
}
`;

exports[`/price asdfasdf eur - returns an error for invalid coin 1`] = `"Sorry, I couldn't find asdfasdf. Try using the full name"`;

exports[`/price bitcoin asdasd - returns an error for invalid vs currency 1`] = `
"Sorry, I can't get prices in asdasd.
Try using a major currency symbol such as USD, EUR, GBP, BTC, ETH, LTC, etc."
`;

exports[`/price bitm - finds coins by id partial match 1`] = `
Object {
  "parse_mode": "markdown",
  "text": "*BitMoney (BIT)* in USD
Current price:  \`$0.00003653\`
h/d/w/m: \`?\` / \`?\` / \`?\` / \`61%\` 
Market cap:  \`$18,608.9\`
24h volume:  \`$9.46\`
_(updated Sat, 16 Jan 2021 03:28:33 GMT)_",
}
`;

exports[`/price doge 10000 - redirects to convert when second arg is a number 1`] = `"10,000 DOGE = $248.742"`;

exports[`/price ethereum eur - supports other currencies 1`] = `
Object {
  "parse_mode": "markdown",
  "text": "*Ethereum (ETH)* in EUR
Current price:  \`€1,019.44\`
h/d/w/m: \`0.166%\` / \`-0.0911%\` / \`-2.86%\` / \`94.1%\` 
Market cap:  \`€116,212,697,466\`
24h volume:  \`€29,842,668,336\`
_(updated Sun, 17 Jan 2021 19:03:27 GMT)_",
}
`;

exports[`/price peakd - finds coins by name partial match 1`] = `
Object {
  "parse_mode": "markdown",
  "text": "*PEAKDEFI (PEAK)* in USD
Current price:  \`$0.269714\`
h/d/w/m: \`0.705%\` / \`3.52%\` / \`1.46%\` / \`-14.1%\` 
Market cap:  \`$24,860,396\`
24h volume:  \`$183,402\`
_(updated Sun, 17 Jan 2021 19:00:08 GMT)_",
}
`;

exports[`/regret - defaults to 10,000 btc sold at $41 usd 1`] = `"If you hadn't sold your 10,000 BTC for $41, you'd be $358,069,959 richer now 🚀! ... fuck!"`;

exports[`/regret 0.5 eth 500 aud - supports other currencies 1`] = `"If you hadn't sold your 0.5 ETH for A$500, you'd be A$301.015 richer now 🚀!"`;

exports[`/regret 1 asdfasdf - returns an error for invalid coin 1`] = `"Sorry, I couldn't find asdfasdf. Try using the full name"`;

exports[`/regret 1 btc 100 asdfasdf - returns an error for invalid vs 1`] = `
"Sorry, I can't get prices in asdfasdf.
Try using a major currency symbol such as USD, EUR, GBP, BTC, ETH, LTC, etc."
`;

exports[`/regret 1 btc foo - returns an error for invalid soldAt 1`] = `"Amount 'foo' is not a valid number"`;

exports[`/regret 1000 xrp 1000 - congratulates no ragerts 1`] = `"Wow, No Ragerts 💥! Your 1,000 XRP would be worth $722.786 less today than the $1,000 you sold it for!"`;

exports[`/regret foo - returns an error for invalid amount 1`] = `"Amount 'foo' is not a valid number"`;

exports[`/start - shows a welcome message 1`] = `"Hi there! To get started try typing /price"`;

exports[`/top10 - defaults to USD 1`] = `
Object {
  "parse_mode": "markdown",
  "text": "*Top 10 Cryptocurrencies*
*1. Bitcoin:*  $35,650 (\`-1.98%\`) - Market $664,301,629,391
*2. Ethereum:*  $1,218.65 (\`-2.83%\`) - Market $139,881,356,417
*3. Tether:*  $1 (\`0.362%\`) - Market $24,377,619,590
*4. Polkadot:*  $16.78 (\`-6.68%\`) - Market $16,092,898,222
*5. XRP:*  $0.275464 (\`-2.96%\`) - Market $12,536,881,122
*6. Cardano:*  $0.371875 (\`5.76%\`) - Market $11,680,221,922
*7. Litecoin:*  $141.92 (\`-2.64%\`) - Market $9,409,485,025
*8. Chainlink:*  $22.98 (\`9.31%\`) - Market $9,225,230,224
*9. Bitcoin Cash:*  $476.66 (\`-3.98%\`) - Market $8,880,194,054
*10. Binance Coin:*  $45.64 (\`6.39%\`) - Market $6,749,069,643
_(updated Sun, 17 Jan 2021 20:02:26 GMT)_",
}
`;

exports[`/top10 aud - supports other vs currencies 1`] = `
Object {
  "parse_mode": "markdown",
  "text": "*Top 10 Cryptocurrencies*
*1. Bitcoin:*  A$46,379 (\`-1.77%\`) - Market A$864,220,547,550
*2. Ethereum:*  A$1,585.4 (\`-2.63%\`) - Market A$181,978,091,106
*3. Tether:*  A$1.3 (\`0.575%\`) - Market A$31,713,966,695
*4. Polkadot:*  A$21.82 (\`-6.49%\`) - Market A$20,935,991,570
*5. XRP:*  A$0.358364 (\`-2.75%\`) - Market A$16,309,805,348
*6. Cardano:*  A$0.483789 (\`5.98%\`) - Market A$15,051,881,881
*7. Litecoin:*  A$184.63 (\`-2.44%\`) - Market A$12,241,231,905
*8. Chainlink:*  A$29.89 (\`9.55%\`) - Market A$12,001,526,359
*9. Bitcoin Cash:*  A$620.11 (\`-3.78%\`) - Market A$11,552,652,934
*10. Binance Coin:*  A$59.37 (\`6.61%\`) - Market A$8,780,175,156
_(updated Sun, 17 Jan 2021 20:02:26 GMT)_",
}
`;

exports[`/top20 - defaults to USD 1`] = `
Object {
  "parse_mode": "markdown",
  "text": "*Top 20 Cryptocurrencies*
*1. Bitcoin:*  $35,650 (\`-1.98%\`)
*2. Ethereum:*  $1,218.65 (\`-2.83%\`)
*3. Tether:*  $1 (\`0.362%\`)
*4. Polkadot:*  $16.78 (\`-6.68%\`)
*5. XRP:*  $0.275464 (\`-2.96%\`)
*6. Cardano:*  $0.371875 (\`5.76%\`)
*7. Litecoin:*  $141.92 (\`-2.64%\`)
*8. Chainlink:*  $22.98 (\`9.31%\`)
*9. Bitcoin Cash:*  $476.66 (\`-3.98%\`)
*10. Binance Coin:*  $45.64 (\`6.39%\`)
*11. Stellar:*  $0.299168 (\`0.746%\`)
*12. USD Coin:*  $0.998964 (\`-0.256%\`)
*13. Wrapped Bitcoin:*  $35,605 (\`-2.41%\`)
*14. Bitcoin SV:*  $198.76 (\`-3.87%\`)
*15. Monero:*  $156.69 (\`-0.451%\`)
*16. EOS:*  $2.74 (\`-2.29%\`)
*17. Aave:*  $194.6 (\`4.9%\`)
*18. Tezos:*  $2.91 (\`-1.54%\`)
*19. Synthetix Network Token:*  $15.58 (\`-4.32%\`)
*20. TRON:*  $0.0300568 (\`-2.08%\`)
_(updated Sun, 17 Jan 2021 20:02:26 GMT)_",
}
`;

exports[`/top20 btc - supports other vs currencies 1`] = `
Object {
  "parse_mode": "markdown",
  "text": "*Top 20 Cryptocurrencies*
*1. Bitcoin:*  1 BTC (\`0%\`)
*2. Ethereum:*  0.0341977 BTC (\`-0.669%\`)
*3. Tether:*  0.00002792 BTC (\`2.25%\`)
*4. Polkadot:*  0.00047112 BTC (\`-4.57%\`)
*5. XRP:*  0.00000773 BTC (\`-1.01%\`)
*6. Cardano:*  0.00001044 BTC (\`7.97%\`)
*7. Litecoin:*  0.00398104 BTC (\`-0.727%\`)
*8. Chainlink:*  0.00064526 BTC (\`11.6%\`)
*9. Bitcoin Cash:*  0.0133864 BTC (\`-1.94%\`)
*10. Binance Coin:*  0.00128018 BTC (\`8.72%\`)
*11. Stellar:*  0.00000839 BTC (\`2.96%\`)
*12. USD Coin:*  0.00002803 BTC (\`2%\`)
*13. Wrapped Bitcoin:*  0.999147 BTC (\`-0.202%\`)
*14. Bitcoin SV:*  0.00557538 BTC (\`-1.75%\`)
*15. Monero:*  0.0043971 BTC (\`1.55%\`)
*16. EOS:*  0.00007692 BTC (\`-0.215%\`)
*17. Aave:*  0.00546154 BTC (\`7.28%\`)
*18. Tezos:*  0.00008176 BTC (\`0.45%\`)
*19. Synthetix Network Token:*  0.0004369 BTC (\`-2.22%\`)
*20. TRON:*  0.0000008441 BTC (\`0.183%\`)
_(updated Sun, 17 Jan 2021 20:02:26 GMT)_",
}
`;
